<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="spUsage"
    tools:context=".ui.detail.DetailFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        android:layout_marginTop="@dimen/margin_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="6dp" />

    <TextView
        android:id="@+id/report_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/colorGreen"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/report_details_text"
        android:textStyle="bold"
        android:gravity="start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button"/>

    <TextView
        android:id="@+id/client_reference_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:gravity="start"
        android:maxLines="2"
        android:text="@string/client_reference_text"
        android:textColor="@color/text_color"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_details" />

    <TextView
        android:id="@+id/client_reference_value_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="13dp"
        android:maxLines="2"
        android:textColor="@color/text_color"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_16"
        tools:text="@string/client_reference_value_text"
        android:gravity="start"
        app:layout_constraintStart_toEndOf="@+id/client_reference_text"
        app:layout_constraintTop_toBottomOf="@+id/report_details"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/short_term_credit"
        android:layout_width="0dp"
        android:layout_height="95dp"
        app:layout_constraintTop_toBottomOf="@+id/client_reference_text"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toStartOf="@+id/short_term_debt"
        android:background="@drawable/credit_score_statistics_background"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/short_term_credit_limit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:maxLines="2"
                android:textColor="@color/statistics_text_color"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/short_term_credit_limit_text"
                android:gravity="start"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/short_term_credit_limit_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@color/colour_orange"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                tools:text="@string/short_term_credit_limit_value_text"
                android:gravity="start"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/short_term_credit_limit"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/short_term_debt"
        android:layout_width="0dp"
        android:layout_height="95dp"
        app:layout_constraintTop_toBottomOf="@+id/client_reference_text"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        app:cardElevation="0dp"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/credit_score_statistics_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/short_term_credit">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/short_term_debt_limit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:maxLines="2"
                android:textColor="@color/statistics_text_color"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/short_term_debt_limit_text"
                android:gravity="start"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/short_term_debt_limit_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="start"
                tools:text="@string/short_term_debt_limit_text_value"
                android:textColor="@color/colour_purple"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/short_term_debt_limit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>